fixed hover effects on mobile nav

--- a/less/index.less
+++ b/less/index.less
@@ -134,8 +134,15 @@ h1, h2, h3, h4 {
 						&:hover {
 							border: solid @accent 1px; 
 							box-shadow: 1px 2px 2px 1px grey;
+							
 						}
+					a:hover {
+						text-decoration: none;
+						font-size: @mobilenavfont;
 					}
+						
+				}
+					
 			}
 		}
 	
@@ -185,7 +192,6 @@ h1, h2, h3, h4 {
 					text-align: left; 
 				}
 			}
-			
 		}
 
 		.call-to-action {
